Chrome fix and lengthy address word-wrap

--- a/src/alice/html/alice/alice.css
+++ b/src/alice/html/alice/alice.css
@@ -109,7 +109,7 @@ button.ok {
   background:
     linear-gradient(315deg, transparent 10px, rgb(3,230,200) 0) bottom right,
     linear-gradient(45deg,  transparent 10px, rgb(3,230,200) 0) bottom left;
-  background-size: 50% 100%;
+  background-size: 51% 100%;
 	background-repeat: no-repeat;
   background-image:
     radial-gradient(circle at 100% 100%, rgba(3,230,200,0) 14px, rgb(3,230,200) 15px),
@@ -122,7 +122,7 @@ button.ok {
     linear-gradient(225deg, transparent 10px, rgb(3,230,200) 0) top right,
     linear-gradient(315deg, transparent 10px, rgb(3,230,200) 0) bottom right,
     linear-gradient(45deg,  transparent 10px, rgb(3,230,200) 0) bottom left;
-  background-size: 50% 50%;
+  background-size: 51% 51%;
 	background-repeat: no-repeat;
   background-image:
     radial-gradient(circle at 0 0, rgba(3,230,200,0) 14px, rgb(3,230,200) 15px),
@@ -137,7 +137,7 @@ button.ok {
   background:
     linear-gradient(135deg, transparent 10px, rgb(3,230,200) 0) top left,
     linear-gradient(225deg, transparent 10px, rgb(3,230,200) 0) top right;
-  background-size: 50% 100%;
+  background-size: 51% 100%;
 	background-repeat: no-repeat;
   background-image:
     radial-gradient(circle at 0 0, rgba(3,230,200,0) 14px, rgb(3,230,200) 15px),
@@ -214,4 +214,8 @@ button.btn-unpayable:disabled {
 
 #modal-thank {
   display: none;
+}
+
+#dest_address {
+  word-wrap: break-word;
 }
